kubernetes/apps/database/pgo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: pgadmin
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin.lab.alsheykh.com
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 5050
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pgadmin.lab.alsheykh.com
    secretName: pgadmin-tls
